--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180.png"> <!-- 180×180 -->
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180.png"><!-- 180×180 -->
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
@@ -16,34 +16,20 @@
   <div class="page__container">
     <div class="page__shadow">
       <!--Шапка-->
-      <header class="header">
-        <a class="header__logo">
-          <img class="header__img" src="img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
-        </a>
+      <header class="header"><a class="header__logo"><img class="header__img" src="img/logo_sedona.svg" width="185"
+            height="96" alt="Логотип Седоны"></a>
         <nav class="nav nav--closed nav--nojs">
-          <div class="nav__wrapper">
-            <button class="nav__toggle" type="button">
-              <svg class="nav__img--closed" width="23" height="22">
+          <div class="nav__wrapper"><button class="nav__toggle" type="button"><svg class="nav__img--closed" width="23"
+                height="22">
                 <use xlink:href="img/sprite.svg#icon-closed"></use>
-              </svg>
-              <svg class="nav__img--opened" width="22" height="22">
+              </svg> <svg class="nav__img--opened" width="22" height="22">
                 <use xlink:href="img/sprite.svg#icon-opened"></use>
-              </svg>
-              <span class="visually-hidden">Открыть меню</span>
-            </button>
+              </svg> <span class="visually-hidden">Открыть меню</span></button>
             <ul class="nav__list site-list">
-              <li class="site-list__item">
-                <a class="site-list__link" href="index.html">Главная</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link site-list__link--current">Фото и видео</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="form.html">Форма отзыва</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
-              </li>
+              <li class="site-list__item"><a class="site-list__link" href="index.html">Главная</a></li>
+              <li class="site-list__item"><a class="site-list__link site-list__link--current">Фото и видео</a></li>
+              <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
+              <li class="site-list__item"><a class="site-list__link" href="https://htmlacademy.ru">html Academy</a></li>
             </ul>
           </div>
         </nav>
@@ -53,19 +39,16 @@
         <h1 class="visually-hidden">Фото и видео</h1>
         <header class="welcome welcome--catalog">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/catalog/sedona-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/catalog/sedona-desktop.svg">
-            <img class="welcome__img welcome__img--catalog" src="img/catalog/sedona.svg" width="229" height="39"
+            <source media="(min-width: 1200px)" srcset="img/sedona-catalog-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/sedona-catalog-desktop.svg"><img
+              class="welcome__img welcome__img--catalog" src="img/sedona-catalog.svg" width="229" height="39"
               alt="Седона">
           </picture>
         </header>
         <section class="about-catalog">
           <h2 class="about-catalog__title">Фото и видео</h2>
-          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса? <br> Фотографии помогут
-            вам
-            забыть
-            о
-            политике и экономике.</p>
+          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса?<br>Фотографии помогут вам
+            забыть о политике и экономике.</p>
         </section>
         <section class="fotoalbum">
           <h2 class="visually-hidden">Фотоальбом</h2>
@@ -73,20 +56,18 @@
             <li class="fotoalbum__item fotoalbum__item--first">
               <div class="fotoalbum__picture-wrapper fotoalbum__picture-wrapper--first-line">
                 <picture>
-
                   <source type="image/webp" media="(min-width: 1200px)"
-                    srcset="img/catalog/landscape-desktop.webp 1x, img/catalog/landscape-desktop@2x.webp 2x">
+                    srcset="img/catalog/landscape-desktop.webp, img/catalog/landscape-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)"
-                    srcset="img/catalog/landscape-tablet.webp 1x, img/catalog/landscape-tablet@2x.webp 2x">
+                    srcset="img/catalog/landscape-tablet.webp, img/catalog/landscape-tablet@2x.webp 2x">
                   <source type="image/webp"
                     srcset="img/catalog/landscape-mobile.webp, img/catalog/landscape-mobile@2x.webp 2x">
-
                   <source media="(min-width: 1200px)"
-                    srcset="img/catalog/landscape-desktop.jpg 1x, img/catalog/landscape-desktop@2x.jpg 2x">
+                    srcset="img/catalog/landscape-desktop.jpg, img/catalog/landscape-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
-                    srcset="img/catalog/landscape-tablet.jpg 1x, img/catalog/landscape-tablet@2x.jpg 2x">
-                  <img class="fotoalbum__img fotoalbum__img--first-line" src="img/catalog/landscape-mobile.jpg"
-                    width="280" height="280" srcset="img/catalog/landscape-mobile@2x.jpg 2x" alt="Неродные просторы">
+                    srcset="img/catalog/landscape-tablet.jpg, img/catalog/landscape-tablet@2x.jpg 2x"><img
+                    class="fotoalbum__img fotoalbum__img--first-line" src="img/catalog/landscape-mobile.jpg" width="280"
+                    height="280" srcset="img/catalog/landscape-mobile@2x.jpg 2x" alt="Неродные просторы">
                 </picture>
               </div>
               <div class="fotoalbum__wrapper">
@@ -94,13 +75,10 @@
                   <h3 class="fotoalbum__title">Неродные просторы</h3>
                   <p class="fotoalbum__description">Автор фото: Борис</p>
                 </div>
-                <div class="fotoalbum__number-wrapper">
-                  <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like" width="23" height="21">
+                <div class="fotoalbum__number-wrapper"><button class="fotoalbum__button" type="button"><svg
+                      class="fotoalbum__like" width="23" height="21">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
-                    </svg>
-                    <span class="visually-hidden">Лайк</span>
-                  </button>
+                    </svg> <span class="visually-hidden">Лайк</span></button>
                   <p class="fotoalbum__number">1350</p>
                 </div>
               </div>
@@ -109,10 +87,10 @@
               <div class="fotoalbum__picture-wrapper">
                 <picture>
                   <source media="(min-width: 1200px)"
-                    srcset="img/catalog/flora-desktop.jpg 1x, img/catalog/flora-desktop@2x.jpg 2x">
+                    srcset="img/catalog/flora-desktop.jpg, img/catalog/flora-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
-                    srcset="img/catalog/flora-tablet.jpg 1x, img/catalog/flora-tablet@2x.jpg 2x">
-                  <img class="fotoalbum__img" src="img/catalog/flora-mobile.jpg" width="280" height="280"
+                    srcset="img/catalog/flora-tablet.jpg, img/catalog/flora-tablet@2x.jpg 2x"><img
+                    class="fotoalbum__img" src="img/catalog/flora-mobile.jpg" width="280" height="280"
                     srcset="img/catalog/flora-mobile@2x.jpg 2x" alt="Местная растительность">
                 </picture>
               </div>
@@ -121,26 +99,22 @@
                   <h3 class="fotoalbum__title">Местная растительность</h3>
                   <p class="fotoalbum__description">Автор фото: Сергей</p>
                 </div>
-                <div class="fotoalbum__number-wrapper">
-                  <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like" width="23" height="21">
+                <div class="fotoalbum__number-wrapper"><button class="fotoalbum__button" type="button"><svg
+                      class="fotoalbum__like" width="23" height="21">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
-                    </svg>
-                    <span class="visually-hidden">Лайк</span>
-                  </button>
+                    </svg> <span class="visually-hidden">Лайк</span></button>
                   <p class="fotoalbum__number">143</p>
                 </div>
               </div>
-
             </li>
             <li class="fotoalbum__item">
               <div class="fotoalbum__picture-wrapper">
                 <picture>
                   <source media="(min-width: 1200px)"
-                    srcset="img/catalog/road-desktop.jpg 1x, img/catalog/road-desktop@2x.jpg 2x">
+                    srcset="img/catalog/road-desktop.jpg, img/catalog/road-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
-                    srcset="img/catalog/road-tablet.jpg 1x, img/catalog/road-tablet@2x.jpg 2x">
-                  <img class="fotoalbum__img" src="img/catalog/road-mobile.jpg" width="280" height="280"
+                    srcset="img/catalog/road-tablet.jpg, img/catalog/road-tablet@2x.jpg 2x"><img class="fotoalbum__img"
+                    src="img/catalog/road-mobile.jpg" width="280" height="280"
                     srcset="img/catalog/road-mobile@2x.jpg 2x" alt="Дорога на север">
                 </picture>
               </div>
@@ -149,13 +123,10 @@
                   <h3 class="fotoalbum__title">Дорога на север</h3>
                   <p class="fotoalbum__description">Автор фото: Петр</p>
                 </div>
-                <div class="fotoalbum__number-wrapper">
-                  <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like" width="23" height="21">
+                <div class="fotoalbum__number-wrapper"><button class="fotoalbum__button" type="button"><svg
+                      class="fotoalbum__like" width="23" height="21">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
-                    </svg>
-                    <span class="visually-hidden">Лайк</span>
-                  </button>
+                    </svg> <span class="visually-hidden">Лайк</span></button>
                   <p class="fotoalbum__number">96</p>
                 </div>
               </div>
@@ -164,10 +135,10 @@
               <div class="fotoalbum__picture-wrapper">
                 <picture>
                   <source media="(min-width: 1200px)"
-                    srcset="img/catalog/bridge-desktop.jpg 1x, img/catalog/bridge-desktop@2x.jpg 2x">
+                    srcset="img/catalog/bridge-desktop.jpg, img/catalog/bridge-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
-                    srcset="img/catalog/bridge-tablet.jpg 1x, img/catalog/bridge-tablet@2x.jpg 2x">
-                  <img class="fotoalbum__img" src="img/catalog/bridge-mobile.jpg" width="280" height="280"
+                    srcset="img/catalog/bridge-tablet.jpg, img/catalog/bridge-tablet@2x.jpg 2x"><img
+                    class="fotoalbum__img" src="img/catalog/bridge-mobile.jpg" width="280" height="280"
                     srcset="img/catalog/bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
                 </picture>
               </div>
@@ -176,13 +147,10 @@
                   <h3 class="fotoalbum__title">Мост дьявола</h3>
                   <p class="fotoalbum__description">Автор фото: Антон</p>
                 </div>
-                <div class="fotoalbum__number-wrapper">
-                  <button class="fotoalbum__button" type="button">
-                    <svg class="fotoalbum__like" width="23" height="21">
+                <div class="fotoalbum__number-wrapper"><button class="fotoalbum__button" type="button"><svg
+                      class="fotoalbum__like" width="23" height="21">
                       <use xlink:href="img/sprite.svg#icon-like"></use>
-                    </svg>
-                    <span class="visually-hidden">Лайк</span>
-                  </button>
+                    </svg> <span class="visually-hidden">Лайк</span></button>
                   <p class="fotoalbum__number">254</p>
                 </div>
               </div>
@@ -192,14 +160,9 @@
         <section class="video">
           <h2 class="video__title">Все еще сомневаетесь?</h2>
           <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
-            очередной
-            раз!</p>
-          <div class="video__player">
-            <button class="video__button"></button>
-
-            <video class="video__container" width="280" poster="img/catalog/video-mobile.jpg"></video>
-
-          </div>
+            очередной раз!</p>
+          <div class="video__player"><button class="video__button"></button><video class="video__container" width="280"
+              poster="img/catalog/video-mobile.jpg"></video></div>
         </section>
       </main>
       <!--Подвал-->
@@ -209,46 +172,26 @@
         </div>
         <div class="social">
           <ul class="social__list">
-            <li class="social__item">
-
-              <a class="button social__button" href="https://vk.com/htmlacademy">
-                <svg class="social__img" width="24" height="24">
+            <li class="social__item"><a class="button social__button" href="https://vk.com/htmlacademy"><svg
+                  class="social__img" width="24" height="24">
                   <use xlink:href="img/sprite.svg#icon-vk"></use>
-                </svg>
-                <span class="visually-hidden"> Мы в Вконтакте</span>
-              </a>
-
-            </li>
-            <li class="social__item">
-
-              <a class="button social__button" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Мы в Телеграме</span>
-                <svg class="social__img" width="24" height="24">
+                </svg> <span class="visually-hidden">Мы в Вконтакте</span></a></li>
+            <li class="social__item"><a class="button social__button" href="https://t.me/htmlacademy"><span
+                  class="visually-hidden">Мы в Телеграме</span> <svg class="social__img" width="24" height="24">
                   <use xlink:href="img/sprite.svg#icon-tg"></use>
-                </svg>
-              </a>
-
-            </li>
-            <li class="social__item">
-
-              <a class="button social__button" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Мы в Ютубе</span>
-                <svg class="social__img" width="24" height="24">
+                </svg></a></li>
+            <li class="social__item"><a class="button social__button"
+                href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span> <svg
+                  class="social__img" width="24" height="24">
                   <use xlink:href="img/sprite.svg#icon-yt"></use>
-                </svg>
-              </a>
-
-            </li>
+                </svg></a></li>
           </ul>
         </div>
-        <div class="html-academy">
-          <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
-            Разработано
-            <svg class="html-academy__img" width="27" height="35">
+        <div class="html-academy"><a class="html-academy__link"
+            href="https://htmlacademy.ru/intensive/adaptive">Разработано <svg class="html-academy__img" width="27"
+              height="35">
               <use xlink:href="img/sprite.svg#icon-html"></use>
-            </svg>
-          </a>
-        </div>
+            </svg></a></div>
       </footer>
     </div>
   </div>
