--- a/source/index.html
+++ b/source/index.html
@@ -3,48 +3,32 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico"><!-- 32×32 -->
   <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180.png"> <!-- 180×180 -->
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180.png"><!-- 180×180 -->
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page__body">
-
   <div class="page__container">
     <!--Шапка-->
-    <header class="header">
-      <a class="header__logo" href="index.html">
-        <img class="header__img" src="img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
-      </a>
+    <header class="header"><a class="header__logo" href="index.html"><img class="header__img" src="img/logo_sedona.svg"
+          width="185" height="96" alt="Логотип Седоны"></a>
       <nav class="nav nav--closed nav--nojs">
-        <div class="nav__wrapper">
-          <button class="nav__toggle" type="button">
-            <svg class="nav__img--closed" width="23" height="22">
+        <div class="nav__wrapper"><button class="nav__toggle" type="button"><svg class="nav__img--closed" width="23"
+              height="22">
               <use xlink:href="img/sprite.svg#icon-closed"></use>
-            </svg>
-            <svg class="nav__img--opened" width="22" height="22">
+            </svg> <svg class="nav__img--opened" width="22" height="22">
               <use xlink:href="img/sprite.svg#icon-opened"></use>
-            </svg>
-            <span class="visually-hidden">Открыть меню</span>
-          </button>
-
+            </svg> <span class="visually-hidden">Открыть меню</span></button>
           <ul class="nav__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__link site-list__link--current">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">Фото и видео</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Форма отзыва</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
-            </li>
+            <li class="site-list__item"><a class="site-list__link site-list__link--current">Главная</a></li>
+            <li class="site-list__item"><a class="site-list__link" href="catalog.html">Фото и видео</a></li>
+            <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
+            <li class="site-list__item"><a class="site-list__link" href="https://htmlacademy.ru">html Academy</a></li>
           </ul>
         </div>
       </nav>
@@ -55,109 +39,97 @@
       <header class="welcome">
         <picture>
           <source media="(min-width: 1200px)" srcset="img/text-index-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/text-index-desktop.svg">
-          <img class="welcome__img" src="img/text-index.svg" width="282" height="214" alt="Добро пожаловать в Седону">
+          <source media="(min-width: 768px)" srcset="img/text-index-desktop.svg"><img class="welcome__img"
+            src="img/text-index.svg" width="282" height="214" alt="Добро пожаловать в Седону">
         </picture>
       </header>
       <section class="text-block about-sedona">
-        <h2 class="text-block__title about-sedona__title">СЕДОНА — небольшой<br> городок в Аризоне, заслуживающий
+        <h2 class="text-block__title about-sedona__title">СЕДОНА — небольшой<br>городок в Аризоне, заслуживающий
           большего!</h2>
         <p class="text-block__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
       <section class="advantages">
-        <h2 class="visually-hidden"> Преимущества Седоны </h2>
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
         <ol class="advantages__list">
-
           <li class="advantages__item advantages__item--blue-theme">
             <div class="advantages__text">
-              <h3 class="advantages__title advantages__title--white-theme">Настоящий <br> городок</h3>
-              <p class="advantages__description advantages__description--white-theme"> — №1 —</p>
-              <p class="advantages__description advantages__description--white-theme"> Седона не аттракцион для
-                туристов,<br>
-                там течет своя жизнь </p>
+              <h3 class="advantages__title advantages__title--white-theme">Настоящий<br>городок</h3>
+              <p class="advantages__description advantages__description--white-theme">— №1 —</p>
+              <p class="advantages__description advantages__description--white-theme">Седона не аттракцион для
+                туристов,<br>там течет своя жизнь</p>
             </div>
-
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/city-desktop.jpg 1x, img/city-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/city-tablet.jpg 1x, img/city-tablet@2x.jpg 2x">
-              <img class="advantages__img" src="img/city.jpg" width="320" height="260" srcset="img/city@2x.jpg 2x"
+              <source media="(min-width: 1200px)" srcset="img/city-desktop.jpg, img/city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/city-tablet.jpg, img/city-tablet@2x.jpg 2x"><img
+                class="advantages__img" src="img/city.jpg" width="320" height="260" srcset="img/city@2x.jpg 2x"
                 alt="Улицы Седоны">
             </picture>
           </li>
           <li class="advantages__item advantages__item--icon advantages__item--house">
             <h4 class="advantages__title advantages__title--icon">Жилье</h4>
-            <p class="advantages__description advantages__description--icon">Рекомендуем пожить в настоящем мотеле,
-              все
-              как
-              в кино!</p>
+            <p class="advantages__description advantages__description--icon">Рекомендуем пожить в настоящем мотеле, все
+              как в кино!</p>
           </li>
           <li class="advantages__item advantages__item--icon advantages__item--food">
             <h4 class="advantages__title advantages__title--icon">Еда</h4>
-            <p class="advantages__description advantages__description--icon">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, <br>
-              Вы НЕ разочаруетесь!
-            </p>
+            <p class="advantages__description advantages__description--icon">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР,<br>Вы
+              НЕ разочаруетесь!</p>
           </li>
           <li class="advantages__item advantages__item--icon advantages__item--souvenir">
             <h4 class="advantages__title advantages__title--icon">Сувениры</h4>
             <p class="advantages__description advantages__description--icon advantages__description--souvenir">Не только
-              китайского, <br> но и местного производства!</p>
+              китайского,<br>но и местного производства!</p>
           </li>
           <li class="advantages__item advantages__item--blue-theme">
             <div class="advantages__text advantages__text--bridge">
-              <h3 class="advantages__title advantages__title--white-theme"> Там есть <br> мост дьявола</h3>
-              <p class="advantages__description advantages__description--white-theme"> — №2 —</p>
-              <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти!<br> Если
-                вы осмелитесь, конечно </p>
+              <h3 class="advantages__title advantages__title--white-theme">Там есть<br>мост дьявола</h3>
+              <p class="advantages__description advantages__description--white-theme">— №2 —</p>
+              <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти!<br>Если
+                вы осмелитесь, конечно</p>
             </div>
             <picture>
-
               <source type="image/webp" media="(min-width: 1200px)"
-                srcset="img/bridge-desktop.webp 1x, img/bridge-desktop@2x.webp 2x">
+                srcset="img/bridge-desktop.webp, img/bridge-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)"
-                srcset="img/bridge-tablet.webp 1x, img/bridge-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/bridge.webp 1x, img/bridge@2x.webp 2x">
-
-              <source media="(min-width: 1200px)" srcset="img/bridge-desktop.jpg 1x, img/bridge-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/bridge-tablet.jpg 1x, img/bridge-tablet@2x.jpg 2x">
-              <img class="advantages__img advantages__img--bridge" src="img/bridge.jpg" width="320" height="260"
+                srcset="img/bridge-tablet.webp, img/bridge-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/bridge.webp, img/bridge@2x.webp 2x">
+              <source media="(min-width: 1200px)" srcset="img/bridge-desktop.jpg, img/bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/bridge-tablet.jpg, img/bridge-tablet@2x.jpg 2x"><img
+                class="advantages__img advantages__img--bridge" src="img/bridge.jpg" width="320" height="260"
                 srcset="img/bridge@2x.jpg 2x" alt="Мост Дьявола">
             </picture>
           </li>
           <li class="advantages__item">
             <div class="advantages__first-line">
-              <h3 class="advantages__title">Небольшая <br>площадь</h3>
+              <h3 class="advantages__title">Небольшая<br>площадь</h3>
               <p class="advantages__description">— №3 —</p>
-              <p class="advantages__description"> Все интересные места находятся очень близко</p>
+              <p class="advantages__description">Все интересные места находятся очень близко</p>
             </div>
           </li>
           <li class="advantages__item">
             <div class="advantages__second-line">
-              <h3 class="advantages__title">Красивая <br> дорога</h3>
+              <h3 class="advantages__title">Красивая<br>дорога</h3>
               <p class="advantages__description">— №4 —</p>
-              <p class="advantages__description advantages__description--road">Ехать в Седону из Лас-Вегаса совсем <br>
-                не скучно!</p>
+              <p class="advantages__description advantages__description--road">Ехать в Седону из Лас-Вегаса совсем<br>не
+                скучно!</p>
             </div>
           </li>
           <li class="advantages__item">
-            <h3 class="advantages__title">Мало<br> туристов</h3>
-            <p class="advantages__description"> — №5 —</p>
-            <p class="advantages__description"> Большинство едет в Гранд Каньон и толпится там</p>
+            <h3 class="advantages__title">Мало<br>туристов</h3>
+            <p class="advantages__description">— №5 —</p>
+            <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
       </section>
       <section class="find-hotel">
         <h2 class="find-hotel__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-        <p class="find-hotel__description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
-          гостиниц в седоне</p>
-        <button class="find-hotel__button button" type="button">Найти Гостиницу</button>
+        <p class="find-hotel__description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения
+          гостиниц в седоне</p><button class="find-hotel__button button" type="button">Найти Гостиницу</button>
       </section>
       <section class="map">
-        <h2 class="visually-hidden">Седона на карте </h2>
-        <iframe class="map__img"
+        <h2 class="visually-hidden">Седона на карте</h2><iframe class="map__img"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104782.35567979202!2d-111.86278226426538!3d34.844953434575736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1662141214368!5m2!1sru!2sru"
-          width="600" height="450" allowfullscreen title="Карта Седоны">
-        </iframe>
-
+          width="600" height="450" allowfullscreen title="Карта Седоны"></iframe>
       </section>
     </main>
     <!--Подвал-->
@@ -167,50 +139,28 @@
       </div>
       <div class="social">
         <ul class="social__list">
-          <li class="social__item">
-
-            <a class="button social__button" href="https://vk.com/htmlacademy">
-              <svg class="social__img" width="24" height="24">
+          <li class="social__item"><a class="button social__button" href="https://vk.com/htmlacademy"><svg
+                class="social__img" width="24" height="24">
                 <use xlink:href="img/sprite.svg#icon-vk"></use>
-              </svg>
-              <span class="visually-hidden"> Мы в Вконтакте</span>
-            </a>
-
-          </li>
-          <li class="social__item">
-
-            <a class="button social__button" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Мы в Телеграме</span>
-              <svg class="social__img" width="24" height="24">
+              </svg> <span class="visually-hidden">Мы в Вконтакте</span></a></li>
+          <li class="social__item"><a class="button social__button" href="https://t.me/htmlacademy"><span
+                class="visually-hidden">Мы в Телеграме</span> <svg class="social__img" width="24" height="24">
                 <use xlink:href="img/sprite.svg#icon-tg"></use>
-              </svg>
-            </a>
-
-          </li>
-          <li class="social__item">
-
-            <a class="button social__button" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Мы в Ютубе</span>
-              <svg class="social__img" width="24" height="24">
+              </svg></a></li>
+          <li class="social__item"><a class="button social__button"
+              href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span> <svg
+                class="social__img" width="24" height="24">
                 <use xlink:href="img/sprite.svg#icon-yt"></use>
-              </svg>
-            </a>
-
-          </li>
+              </svg></a></li>
         </ul>
       </div>
-      <div class="html-academy">
-        <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
-          Разработано
-          <svg class="html-academy__img" width="27" height="35">
+      <div class="html-academy"><a class="html-academy__link"
+          href="https://htmlacademy.ru/intensive/adaptive">Разработано <svg class="html-academy__img" width="27"
+            height="35">
             <use xlink:href="img/sprite.svg#icon-html"></use>
-          </svg>
-        </a>
-      </div>
+          </svg></a></div>
     </footer>
   </div>
-
-
   <script src="js/script.js"></script>
 </body>
 
